<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:scrollbars="none" >
<LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Second_button"
            android:background="@drawable/dark_button"
            android:id="@+id/btnSetting" android:layout_gravity="right"/>
    <Button
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:text="@string/First_button"
            android:background="@drawable/dark_button"
            android:id="@+id/btnSendSMS" android:layout_gravity="center_horizontal" android:layout_weight="0.22"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/List"
            android:id="@+id/textView2" android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/First"
            android:id="@+id/text1" android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Second"
            android:id="@+id/text2" android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Third"
            android:id="@+id/text3" android:layout_gravity="center_horizontal"/>
    <TextView
            android:id="@+id/tvTitleGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provider_gps"
            android:textSize="30sp">
    </TextView>
    <TextView
            android:id="@+id/tvEnabledGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp">
    </TextView>
    <TextView
            android:id="@+id/tvLocationGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp">
    </TextView>
    <TextView
            android:id="@+id/tvStatusGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp">
    </TextView>
</LinearLayout>
</ScrollView>