<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:scrollbars="none" >
<LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editText" android:layout_gravity="center_horizontal"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editText2" android:layout_gravity="center_horizontal"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editText3" android:layout_gravity="center_horizontal"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:gravity="center">
        <Button
                android:layout_width="240px"
                android:layout_height="wrap_content"
                android:text="@string/Back_button"
                android:background="@drawable/dark_button"
                android:id="@+id/btnBack"/>
        <Button
                android:layout_width="240px"
                android:layout_height="wrap_content"
                android:text="@string/Save_button"
                android:background="@drawable/dark_button"
                android:id="@+id/btnSave"/>
        <Button
                android:layout_width="240px"
                android:layout_height="wrap_content"
                android:text="@string/Apply_button"
                android:background="@drawable/dark_button"
                android:id="@+id/btnTest"/>
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/List"
            android:id="@+id/textView4" android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/First"
            android:id="@+id/textView" android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Second"

            android:id="@+id/textView2" android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Third"
            android:id="@+id/textView3" android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Texst"
            android:id="@+id/textView5" android:layout_gravity="center_horizontal"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editText4" android:layout_gravity="center_horizontal" android:layout_weight="0.38"/>

    <TextView
            android:id="@+id/tvTitleGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provider_gps"
            android:textSize="30sp">
    </TextView>
    <TextView
            android:id="@+id/tvEnabledGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp">
    </TextView>
    <TextView
            android:id="@+id/tvLocationGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp">
    </TextView>
    <TextView
            android:id="@+id/tvStatusGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp">
    </TextView>
    <Button
            android:id="@+id/btnLocationSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickLocationSettings"
            android:text="@string/location_settings">
    </Button>
</LinearLayout>
</ScrollView>